# prototype-design

./: .gitignore  README.md  drd_harness_foundry_constitution_start_v1.zip.sha256
drd_harness_foundry_constitution_start_v1/repository/: AGENTS.md  README.md  pyproject.toml  setup.cfg
drd_harness_foundry_constitution_start_v1/repository/contracts/: README.md
drd_harness_foundry_constitution_start_v1/repository/docs/adr/: README.md
drd_harness_foundry_constitution_start_v1/repository/docs/architecture/: README.md  thin_cli_templates.md
drd_harness_foundry_constitution_start_v1/repository/examples/p4_release_smoke/: README.md  example_manifest.json  source_prd.md
drd_harness_foundry_constitution_start_v1/repository/rules/: README.md
drd_harness_foundry_constitution_start_v1/repository/schemas/: README.md  artifact_manifest.schema.json  runtime_declaration.schema.json
drd_harness_foundry_constitution_start_v1/repository/schemas/compiler/: compiler_atomic_semantic_unit.schema.json  compiler_conservation_report.schema.json  compiler_input_bundle.schema.json  compiler_semantic_unit_inventory.schema.json  final_drd_hash_index.schema.json  final_drd_manifest.schema.json  final_drd_reference_index.schema.json  final_drd_toc.schema.json  read_only_qa_boundary.schema.json
drd_harness_foundry_constitution_start_v1/repository/schemas/locks/: spec_lock.schema.json  (+11 more)
drd_harness_foundry_constitution_start_v1/repository/templates/: README.md  review_decision.template.json  stage_manifest.template.json
drd_harness_foundry_constitution_start_v1/repository/tests/: README.md
(+1150 files in other folders)
