[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "drd-harness"
version = "0.0.0"
description = "Governed PRD-to-DRD harness"
requires-python = ">=3.11"

[project.scripts]
drd-harness = "drd_harness.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
